Add Home Page Main Image

--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@
 /* hero background IMG */
 /* single IMG */
 .bg-img-SINGLE {
-background-image: url(../img/background/SINGLE-bg.jpg);
+background-image: url(../images/1.jpg);
 }
 
 /* slide slider IMG */
